modules/gdscript/tests/scripts/runtime/errors/use_return_value_of_free_call.gd
#debug-only: Runtime checks for using the result of a void method is disabled in release

func test():
	var obj
	obj = Node.new()
	print(obj.free())
